--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ requires-python = ">=3.12"
 dependencies = [
     "nicegui",
     "aiomqtt",
-    "matplotlib"
+    "matplotlib",
+    "requests"
 ]
